<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2014 Peter Gregus (C3C076@xda)
 * Copyright (C) 2015 Michael Serpieri (mickybart@xda)
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_cat_gestures"
        android:title="@string/pref_cat_gestures_title">

        <org.pygoscelis.mobile.wakeup.preference.AppPickerPreference
            android:key="pref_wg_doubletap"
            android:title="@string/pref_wg_doubletap_title"
            android:summary="@string/app_picker_none"
            iconPickerEnabled="false" />

        <org.pygoscelis.mobile.wakeup.preference.AppPickerPreference
            android:key="pref_wg_sweep_right"
            android:title="@string/pref_wg_sweep_right_title"
            android:summary="@string/app_picker_none"
            iconPickerEnabled="false" />

        <org.pygoscelis.mobile.wakeup.preference.AppPickerPreference
            android:key="pref_wg_sweep_left"
            android:title="@string/pref_wg_sweep_left_title"
            android:summary="@string/app_picker_none"
            iconPickerEnabled="false" />

        <org.pygoscelis.mobile.wakeup.preference.AppPickerPreference
            android:key="pref_wg_sweep_up"
            android:title="@string/pref_wg_sweep_up_title"
            android:summary="@string/app_picker_none"
            iconPickerEnabled="false" />

        <org.pygoscelis.mobile.wakeup.preference.AppPickerPreference
            android:key="pref_wg_sweep_down"
            android:title="@string/pref_wg_sweep_down_title"
            android:summary="@string/app_picker_none"
            iconPickerEnabled="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_cat_kernel"
        android:title="@string/pref_cat_kernel_title">

        <SwitchPreference
            android:key="pref_dt2w"
            android:title="@string/pref_dt2w_title"
            android:summary="@string/pref_dt2w_summary"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="pref_s2w"
            android:title="@string/pref_s2w_title"
            android:summary="@string/pref_s2w_summary"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="pref_wg"
            android:title="@string/pref_wg_title"
            android:summary="@string/pref_wg_summary"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="pref_proximity"
            android:title="@string/pref_proximity_title"
            android:summary="@string/pref_proximity_summary"
            android:defaultValue="false" />

        <org.pygoscelis.mobile.wakeup.preference.SeekBarPreference
            android:key="pref_vib_strength"
            android:icon="@drawable/ic_audio_ring_notif_vibrate"
            android:title="@string/pref_vib_strength_title"
            android:defaultValue="20" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_cat_other"
        android:title="@string/pref_cat_other_title">
        <SwitchPreference
            android:key="pref_start_onboot"
            android:title="@string/pref_start_onboot_title"
            android:summary="@string/pref_start_onboot_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_cat_about"
        android:title="@string/pref_cat_about_title">

        <Preference
            android:key="pref_about" 
            android:summary="@string/pref_about_summary" />

    </PreferenceCategory>

</PreferenceScreen>